[package]
name = "boomserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { path = "cli" }
http = { path = "http" }
multithreadhttp = { path = "multithreadhttp" }
util = { path = "util" }
httpmock = "0.6"
isahc = "*"